  - export alias files instead of item values
  - export to CSV/TSV, HTML, XML
* nk2info

Test:
* add autoconf/make test suite

Beta release
* have automated test suite
* remove deprecated functions in libnk2_legacy.[ch]
* remove deprecated definition in include/libnk2/mapi.h
* update man pages
* add documentation
* check inclusion of local libraries

Bindings:
* python
* .net
* java

20111005
* updated configure.ac and m4 files
* code clean up

20111004
* updated configure.ac and m4 files
* updated README files
* updated spec file
* updated pc file

20111003
* updated configure.ac
* updated common, array type, libsystem, libuna, libbfio, libfdatetime, libfmapi, libfvalue
* code clean up

20110727
* updated manuals

20110717
* implemented an alternative solution for sizeof( size_t ) == 8 ?

20110706
* code clean up
* updated msvscpp files, added VSDebug
* updated nk2tools/log_handle.[ch]
* added open_close example
* worked on automated test
* added value_identifier initialize and free functions
* added codepage functionality to info handle

20110705
* refactored nk2export and export handle
* nk2export added quiet option
* updated libnk2.c
* added libnk2_unused.h
* updated README.mingw
* updated libfmapi

20110704
* updated configure
* added gettext support
* 2011 update
* updated common, array type,
* updated libcstring, liberror, libnotify, libsystem, libuna, libbfio,
  libfdatetime, libfguid, libfvalue, libfmapi, libfwnt
* code clean up
  - corrected indentation of LIBNK2_EXTERN
  - added info handle, refactored nk2info
  - added nk2tools_libnk2.h, refactored nk2tools
  - updated nk2input.[ch]
* added system codepage functions

20101119
* added local library support to libnk2_extern.h

20101113
* textual changes
* updated libfmapi
* updated nk2input.c

20101111
* updated configure.ac
* updated include/error.h, include/types.h
* updated array type
* updated liberror, libsystem, libbfio, libfmapi, libfvalue
* added libnk2.rc
* added modification time API function
