@@ -1,4 +1,4 @@
-Libnk2 supports two types of static compilation
+Libnk2 supports the following types of static compilation:
 * static library
 * static excutables
 
