@@ -33,6 +33,7 @@
 #include <libfdatetime_fat_date_time.h>
 #include <libfdatetime_filetime.h>
 #include <libfdatetime_nsf_timedate.h>
+#include <libfdatetime_posix_time.h>
 #include <libfdatetime_types.h>
 
 #elif defined( HAVE_LIBFDATETIME_H )
