@@ -1,8 +1,9 @@
 dnl Functions for libbfio
 dnl
-dnl Version: 20111004
+dnl Version: 20111007
 
 dnl Function to detect if libbfio is available
+dnl ac_libbfio_dummy is used to prevent AC_CHECK_LIB adding unnecessary -l<library> arguments
 AC_DEFUN([AX_LIBBFIO_CHECK_LIB],
  [dnl Check if parameters were provided
  AS_IF(
