@@ -166,6 +166,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\libfdatetime\libfdatetime_nsf_timedate.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\libfdatetime\libfdatetime_posix_time.c"
+				>
+			</File>
+			<File
 				RelativePath="..\..\libfdatetime\libfdatetime_support.c"
 				>
 			</File>
@@ -200,7 +208,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\libfdatetime\libfdatetime_string.h"
+				RelativePath="..\..\libfdatetime\libfdatetime_nsf_timedate.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\libfdatetime\libfdatetime_posix_time.h"
 				>
 			</File>
 			<File
